Thu Dec  6 10:14:44 CET 2012
	Force adding "Connection: close" header to response if
	client asked for connection to be closed (so far, we
	did close the connection, but did not send the
	"Connection: close" header explicitly, which some clients
	seem to dislike. (See discussion on mailinglist).
	Also, if there is already a transfer-encoding other
	than 'chunked' set by the application, we also now close
	the connection if the response is of unknown size. -CG

Wed Dec  5 19:22:26 CET 2012
	Fixing parameter loss of POST parameters with IE8 and Chrome
	in the PostProcessor as the code failed to properly handle
	partial data. -MM

Fri Nov  9 21:36:46 CET 2012
	Releasing libmicrohttpd 0.9.23. -CG

Thu Nov  8 22:32:59 CET 2012
	Ship our own version of tsearch and friends if not provided by platform,
	so that MHD works nicely on Android. -JJ

Mon Oct 22 13:05:01 CEST 2012
	Immediately do a second read if we get a full buffer from
	TLS as there might be more data in the TLS buffers even if
	there is no activity on the socket. -CG

Tue Oct 16 01:33:55 CEST 2012
	Consistently use "#ifdef" and "#ifndef" WINDOWS, and not
	sometimes "#if". -CG

Sat Sep  1 20:51:21 CEST 2012
	Releasing libmicrohttpd 0.9.22. -CG

Sat Sep  1 20:38:35 CEST 2012
	Adding configure option to allow selecting support for basic
	and digest authentication separately (#2525). -CG

Thu Aug 30 21:12:56 CEST 2012
	Fixing URI argument parsing when string contained keys without
	equals sign (i.e. '&bar&') in the middle of the argument (#2531).
	Also replacing 'strstr' with more efficient 'strchr' when
	possible. -CG

Tue Aug 21 14:36:17 CEST 2012
	Use "int" instead of "enum X" in 'va_arg' calls to be nice to
	compilers that use 'short' (i.e. 8 or 16 bit) enums but pass
	enums still as "int" in varargs. (See discussion on mailinglist). -CG/MV

Tue Aug 21 14:31:54 CEST 2012
	Reduce default size in post processor buffer (for small systems;
	performance impact on large systems should be minimal). -CG/MV
